--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/carlosazaustre/universal-js-boilerplate",
   "dependencies": {
+    "express": "^4.13.0"
   },
   "devDependencies": {
     "babel": "^5.6.14",
