--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/carlosazaustre/universal-js-boilerplate",
   "dependencies": {
-    "express": "^4.13.0"
+    "express": "^4.13.0",
+    "react": "^0.13.3",
+    "react-engine": "^1.7.0",
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel": "^5.6.14",
