--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/carlosazaustre/universal-js-boilerplate",
   "dependencies": {
+    "course": "0.0.1",
     "express": "^4.13.0",
     "react": "^0.13.3",
     "react-engine": "^1.7.0",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "st": "^0.5.4"
   },
   "devDependencies": {
     "babel": "^5.6.14",
