--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,20 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# http://editorconfig.org
 
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
+
+# Change these settings to your own preference
 indent_style = space
 indent_size = 2
 
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
+# We recommend you to keep these unchanged
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
