--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "babel-runtime": "^5.6.15",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
+    "eslint": "^0.24.0",
+    "eslint-plugin-react": "^2.6.4",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^0.15.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-stylus": "^2.0.5",
+    "nib": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
