--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "browserify": "^10.2.4",
     "eslint": "^0.24.0",
     "eslint-plugin-react": "^2.6.4",
+    "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "gulp": "^3.9.0",
     "gulp-eslint": "^0.15.0",
+    "gulp-jscs": "^1.6.0",
     "gulp-minify-css": "^1.2.0",
+    "gulp-stylint": "^1.1.3",
     "gulp-stylus": "^2.0.5",
     "nib": "^1.1.0",
     "vinyl-buffer": "^1.0.0",
