--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "gulp build",
-    "start": "./node_modules/babel/bin/babel-node ./app/server.js"
+    "start": "./node_modules/babel/bin/babel-node ./src/server.js"
   },
   "repository": {
     "type": "git",
