--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "universal-js-boilerplate",
   "version": "0.0.1",
   "description": "A boilerplate to start universal (isomorphic) web applications",
-  "main": "index.js",
+  "main": "./src/app/server/index.js",
   "scripts": {
     "build": "gulp build",
-    "start": "nodemon --exec babel-node --stage 0 -- ./src/server.js"
+    "start": "nodemon --exec babel-node --stage 0 -- ./src/app/server/index.js"
   },
   "repository": {
     "type": "git",
