--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.13.0",
     "react": "^0.13.3",
     "react-engine": "^1.7.0",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^5.6.14",
