--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "nib": "^1.1.0",
     "nodemon": "^1.3.7",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
   }
 }
