--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "css-loader": "^0.15.5",
     "eslint": "^0.24.0",
     "eslint-plugin-react": "^2.6.4",
+    "eslint-loader": "^1.0.0",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.8.2",
     "gulp": "^3.9.0",
