Add es6-features, remove strict, standard rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,11 @@
     "__SERVER__": true
   },
   "ecmaFeatures": {
-    "jsx": true,
-    "arrowFunctions": true
+    "jsx": false,
+    "arrowFunctions": true,
+    "blockBindings": true,
+    "modules": true,
+    "classes": true
   },
   "rules": {
 
@@ -23,9 +26,15 @@
     "quotes": [2, "single"],
     "no-multi-spaces": 0,
     "key-spacing": 0,
+    "strict": [2, "never"],
+    "no-shadow": [0],
+    "no-use-before-define": [2, "nofunc"],
+    "new-cap": [0],
 
     "import/default": 1,
-    "import/no-unresolved": 1,
+    "import/no-unresolved": 2,
+    "import/export": 2,
+    "import/no-named-as-default": 2,
 
     "react/display-name": 0,
     "react/jsx-boolean-value": 1,
