--- a/.jscsrc
+++ b/.jscsrc
@@ -3,6 +3,6 @@
   "disallowSpacesInAnonymousFunctionExpression": null,
   "validateLineBreaks": "LF",
   "validateIndentation": 2,
-  "excludeFiles": ["build/**", "node_modules/**"],
-  "esprima": "esprima-fb"
+  "requireTrailingComma": false,
+  "excludeFiles": ["build/**", "node_modules/**"]
 }
