--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=4.1 <5",
+    "npm": ">=3.1 <4"
+  },
   "name": "universal-js-boilerplate",
   "version": "0.0.1",
   "description": "A boilerplate to start universal (isomorphic) web applications",
@@ -46,14 +50,14 @@
     "browserify": "^10.2.4",
     "css-loader": "^0.15.5",
     "eslint": "^1.6.0",
+    "eslint-config-airbnb": "^0.1.0",
     "eslint-loader": "^1.0.0",
-    "eslint-plugin-import": "^0.7.9",
     "eslint-plugin-react": "^2.7.1",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.8.2",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
-    "gulp-jscs": "^1.6.0",
+    "gulp-jscs": "^3.0.1",
     "gulp-minify-css": "^1.2.0",
     "gulp-stylint": "^1.1.3",
     "gulp-stylus": "^2.0.5",
