--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "description": "A boilerplate to start universal (isomorphic) web applications",
   "main": "./src/app/server.js",
   "scripts": {
+    "w": "gulp watch",
+    "watch": "npm run w & npm run start",
     "start": "nodemon --exec babel-node --stage 0 -- ./src/app/server.js",
     "build": "TARGET=build webpack",
     "dev": "TARGET=dev webpack-dev-server --progress --colors --hot --inline --history-api-fallback --content-base www",
