Few changes on eslint, jscs and babel configs. Fix tabs on gulp tasks

--- a/.jscsrc
+++ b/.jscsrc
@@ -4,5 +4,7 @@
   "validateLineBreaks": "LF",
   "validateIndentation": 2,
   "requireTrailingComma": false,
+  "requireCapitalizedConstructors": false,
+  "esnext": true,
   "excludeFiles": ["build/**", "node_modules/**"]
 }
