--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "express": "^4.13.0",
     "react": "^0.13.3",
+    "react-redux": "^2.1.2",
+    "redux": "^3.0.0",
     "react-engine": "^1.7.0",
     "react-router": "^0.13.3",
     "serve-favicon": "^2.3.0"
@@ -45,6 +47,7 @@
     "babel-core": "^5.8.3",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.1.0",
     "babel-runtime": "^5.6.15",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
@@ -55,6 +58,8 @@
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^2.7.1",
     "esprima-fb": "^15001.1.0-dev-harmony-fb",
+    "expect": "^1.8.0",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
@@ -62,16 +67,26 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-stylint": "^1.1.3",
     "gulp-stylus": "^2.0.5",
+    "jeet": "^6.1.2",
+    "jsdom": "^5.6.1",
     "json-loader": "^0.5.2",
+    "mocha": "^2.2.5",
+    "mocha-jsdom": "^1.0.0",
     "nib": "^1.1.0",
+    "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.2.8",
+    "react-transform-hmr": "^1.0.0",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
+    "todomvc-app-css": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.10.5",
+    "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.10.1",
+    "webpack-hot-middleware": "^2.2.0",
     "webpack-merge": "^0.1.2"
   }
 }
