--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "A boilerplate to start universal (isomorphic) web applications",
   "main": "./src/app/server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node --stage 0 -- ./src/app/server.js",
+    "start": "nodemon --exec babel-node --stage 0 -- ./src/app/server.js --compilers js:babel/register",
     "build": "TARGET=build webpack",
     "dev": "TARGET=dev webpack-dev-server --progress --colors --hot --inline --history-api-fallback --content-base www",
     "deploy": "TARGET=build webpack -p -d"
@@ -53,6 +53,7 @@
     "babel-runtime": "^5.6.15",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
+    "chai": "^3.3.0",
     "css-loader": "^0.15.5",
     "del": "^2.0.2",
     "eslint": "^1.6.0",
@@ -78,6 +79,11 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.2.8",
     "react-transform-hmr": "^1.0.0",
+    "redux-logger": "^2.0.4",
+    "redux-promise": "^0.5.0",
+    "redux-thunk": "^1.0.0",
+    "sinon": "^1.17.1",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.4.0",
     "todomvc-app-css": "^2.0.1",
