--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
     "raw-loader": "^0.5.1",
+    "react-dom": "^0.14.0",
     "react-hot-loader": "^1.2.8",
     "react-transform-hmr": "^1.0.0",
+    "redux-devtools": "^2.1.5",
     "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0",
