--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
   },
   "homepage": "https://github.com/carlosazaustre/universal-js-boilerplate",
   "dependencies": {
-    "eslint-loader": "^1.1.0",
-    "express": "^4.13.0",
-    "gulp-stylus": "^2.1.0",
-    "react": "^0.13.3",
+    "babel": "^5.8.21",
+    "express": "^4.13.3",
+    "qs": "^4.0.0",
+    "react": "^0.14.0",
     "react-engine": "^1.7.0",
-    "react-redux": "^2.1.2",
+    "react-redux": "^4.0.0",
     "react-router": "^0.13.4",
+    "react-dom": "^0.14.0",
     "redux": "^3.0.0",
-    "serve-favicon": "^2.3.0"
+    "redux-thunk": "^0.1.0",
+    "serve-favicon": "^2.3.0",
+    "serve-static": "^1.10.0"
   },
   "devDependencies": {
     "babel": "^5.6.14",
@@ -67,8 +70,7 @@
     "gulp-eslint": "^1.0.0",
     "gulp-jscs": "^3.0.1",
     "gulp-minify-css": "^1.2.0",
-    "gulp-stylus": "^2.0.5",
-    "jeet": "^6.1.2",
+    "gulp-stylus": "^2.1.0",
     "jsdom": "^5.6.1",
     "json-loader": "^0.5.2",
     "mocha": "^2.2.5",
@@ -77,13 +79,11 @@
     "node-libs-browser": "^0.5.2",
     "nodemon": "^1.3.7",
     "raw-loader": "^0.5.1",
-    "react-dom": "^0.14.0",
     "react-hot-loader": "^1.2.8",
     "react-transform-hmr": "^1.0.0",
     "redux-devtools": "^2.1.5",
     "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^1.0.0",
     "sinon": "^1.17.1",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.12.3",
