--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "gulp-eslint": "^1.0.0",
     "gulp-jscs": "^3.0.1",
     "gulp-minify-css": "^1.2.0",
-    "gulp-stylus": "^2.1.0",
     "gulp-stylint": "^3.0.0",
+    "gulp-stylus": "^2.1.0",
     "jsdom": "^5.6.1",
     "json-loader": "^0.5.2",
     "mocha": "^2.2.5",
@@ -86,6 +86,7 @@
     "redux-devtools": "^2.1.5",
     "redux-logger": "^2.0.4",
     "redux-promise": "^0.5.0",
+    "redux-router": "^1.0.0-beta3",
     "sinon": "^1.17.1",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.12.3",
